--- a/src/App.css
+++ b/src/App.css
@@ -13,19 +13,16 @@ h2 {
 }
 
 .Header {
-  width: 100%;
   padding-top: 3rem;
 }
 
 header {
-  width: 100%;
   font-size: 0.94rem;
   line-height: 1rem;
   font-weight: 600;
 }
 
 #intro-left {
-  max-width: 60%;
   flex-shrink: 1;
 }
 
@@ -55,28 +52,11 @@ header {
   font-weight: 500;
 }
 
-#intro-footer-text div {
-  gap: 0.5rem;
-}
-
-#icons {
-  gap: 1rem;
-}
-
 .Introduction img {
   max-width: 22rem;
   max-height: 22rem;
   flex-shrink: 1;
-  margin-top: 3.5rem;
-}
-
-#skill-icons {
-  margin-top: 2rem;
-}
-
-.skill-icon {
-  text-align: center;
-  gap: 0.7rem;
+  margin-top: 2.5rem;
 }
 
 .skill-icon img {
@@ -90,6 +70,12 @@ header {
   line-height: 1.5rem;
 }
 
+.Profile:nth-child(2) {
+  position: relative;
+  font-size: 0.9rem;
+  line-height: 1.5rem;
+}
+
 .Profile h3 {
   font-family: "Playfair Display", serif;
   font-size: 1.3rem;
@@ -97,17 +83,31 @@ header {
 
 #basic-info {
   padding: 2.5rem;
-  border: 1px solid white;
+  border: 1px solid transparent;
   border-radius: 12px;
+  position: relative;
+  z-index: 1;
 }
 
-#basic-info h3 {
-  margin-bottom: 2rem;
+.dark #basic-info::after {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  padding: 2.5rem;
+  border: 1px solid transparent;
+  border-radius: 12px;
+  background-color: #525252;
+  top: 0.5rem;
+  left: 0.5rem;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
 }
 
 .info-key {
   font-weight: 700;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 #project-card-container .Project:first-child {
@@ -129,7 +129,6 @@ header {
 .Project {
   border: 1px solid transparent;
   border-radius: 12px;
-  width: 47%;
   line-height: 1.5rem;
 }
 
@@ -159,7 +158,6 @@ footer {
 }
 
 footer h1 {
-  text-align: right;
   max-width: 70%;
   line-height: 4rem;
 }
@@ -170,6 +168,16 @@ footer h1 {
   font-weight: 500;
 }
 
-.dark .Header header label div::after {
-  background-image: url();
+@media (max-width: 700px) {
+  html {
+    font-size: 12px;
+  }
+
+  .component {
+    padding: 3rem 0;
+  }
+
+  .info-key {
+    font-weight: 500;
+  }
 }
